--- a/Me_myself_and_I/index.html
+++ b/Me_myself_and_I/index.html
@@ -8,5 +8,23 @@
 <body>
     <h1>Chas Academy!</h1>
     <p>Min första webbsida är nu online.</p>
+    <h2>Kunskap</h2>
+    <ul>
+        <li>Metoder och verktyg för projektledning.</li>
+        <li>Situationsanpassat ledarskap, gruppdynamiska processer, konflikthantering, kommunikation och presentationsteknik.</li>
+        <li>Den svenska säkerhetsskyddslagstiftningens krav och syfte</li>
+        <li>Trygghet och säkerhet före, under och efter anställning, inkl. Security Awareness och Social Engineering.</li>
+        <li>Fysisk säkerhet omfattande bl.a. inbrottsskydd, säker passage, brandskydd, försäkringsvillkor och skyddslagen.</li>
+        <li>Omvärldsbevaka och analysera säkerhets- och trygghetstrenders påverkan på samhälle, organisation och individ.</li>
+        <li>Genomföra risk- och sårbarhetsanalyser, ta fram krisplaner och kontinuitetsstrategier, samt att hålla utbildningar, övningar och tester inom risk-, kris- och kontinuitethanteringsområdet.</li>
+        <li>Planera och styra säkerhets- och trygghetsprojekt samt arbeta systematiskt med säkerhetsskydd utifrån kravuppfyllnad och behov.</li>
+        <li>Tillämpa verktyg och processer i syfte att effektivisera resursanvändning samt förstå konsekvenser i samband med evenemang.</li>
+        <li>Skapa och förstå upphandlingsunderlag och avtal som beställare och leverantör, samt kunna tillämpa lagstiftning i sin yrkesroll.</li>
+        <li>Tillämpa relevant lagstiftning och andra krav inom ramen för säkerhets- och trygghetsarbetet, samt arbeta med upphandlingar och anbud.</li>
+        <li>Upprätta ett adekvat och anpassat säkerhetsskydd utifrån verksamhetens behov.</li>
+        <li>Arbeta med omvärldsbevakning och analys avseende det politiska läget, offentlig förvaltning, hotbilder, brottslighet och annat som påverkar säkerhetsläget i Sverige och internationellt.</li>
+        <li>Identifiera och analysera risker, implementera åtgärdsplaner och driva ett anpassat kris- och kontinuitetsarbete inom verksamheten.</li>
+        <li>Bedriva olika typer av säkerhets- och trygghetsprojekt utifrån dess tillförda värde, tillgängliga resurser och uppsatta mål.</li>
+    </ul>
 </body>
 </html>
