CSS and text added

--- a/Me_myself_and_I/index.html
+++ b/Me_myself_and_I/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min första webbsida</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Chas Academy!</h1>
     <p>Min första webbsida är nu online.</p>
-    <h2>Kunskap</h2>
+    <div class="hobby-wrapper">
+        <div>
+            <h2>Mina hobbys</h2>
+            <ul>
+                <li>Datorspel</li>
+                <li>Politik</li>
+                <li>Träna</li>
+                <li>Brädspel</li>
+                <li>Bygga</li>
+                <li>Säkerhet</li>
+            </ul>
+        </div>
+        <img src="Generated_Image_qj9uztqj9uztqj9u.png" alt="Kombi" width="300">
+    </div>
+    <!--
     <ul>
         <li>Metoder och verktyg för projektledning.</li>
         <li>Situationsanpassat ledarskap, gruppdynamiska processer, konflikthantering, kommunikation och presentationsteknik.</li>
@@ -26,5 +41,6 @@
         <li>Identifiera och analysera risker, implementera åtgärdsplaner och driva ett anpassat kris- och kontinuitetsarbete inom verksamheten.</li>
         <li>Bedriva olika typer av säkerhets- och trygghetsprojekt utifrån dess tillförda värde, tillgängliga resurser och uppsatta mål.</li>
     </ul>
+    -->
 </body>
 </html>
