--- a/Me_myself_and_I/index.html
+++ b/Me_myself_and_I/index.html
@@ -6,6 +6,9 @@
     <title>Min första webbsida</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<link href="https://fonts.googleapis.com/css?family=David+Libre:400,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
 <body>
     <h1>Chas Academy!</h1>
     <p>Min första webbsida är nu online.</p>
@@ -21,7 +24,7 @@
                 <li>Säkerhet</li>
             </ul>
         </div>
-        <img src="Generated_Image_qj9uztqj9uztqj9u.png" alt="Kombi" width="300">
+        <img src="Generated_Image_qj9uztqj9uztqj9u.png" alt="Kombo hobby" width="300">
     </div>
     <!--
     <ul>
